fix broken css variables

--- a/css/prism-coy.css
+++ b/css/prism-coy.css
@@ -39,7 +39,7 @@ pre[class*="language-"]>code {
 	position: relative;
 	border-left: 10px solid #358ccb;
 	box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
-	background---color: undefined;
+	background---color: rgba(253,253,253,0.997);
 	background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
 	background-size: 3em 3em;
 	background-origin: content-box;
@@ -57,7 +57,7 @@ code[class*="language"] {
 /* Margin bottom to accommodate shadow */
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background---color: undefined;
+	background---color: rgba(253,253,253,0.997);
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -69,7 +69,7 @@ pre[class*="language-"] {
 	position: relative;
 	padding: .2em;
 	border-radius: 0.3em;
-	--color: undefined;
+	--color: rgba(201,44,44,0.997);
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	display: inline;
 	white-space: normal;
@@ -125,7 +125,7 @@ pre[class*="language-"]:after {
 .token.constant,
 .token.symbol,
 .token.deleted {
-	--color: undefined;
+	--color: rgba(201,44,44,0.997);
 }
 
 .token.selector,
@@ -135,14 +135,14 @@ pre[class*="language-"]:after {
 .token.function,
 .token.builtin,
 .token.inserted {
-	--color: undefined;
+	--color: rgba(47,156,10,0.997);
 }
 
 .token.operator,
 .token.entity,
 .token.url,
 .token.variable {
-	--color: undefined;
+	--color: rgba(166,127,89,0.997);
 	background: rgba(255, 255, 255, 0.5);
 }
 
@@ -150,7 +150,7 @@ pre[class*="language-"]:after {
 .token.attr-value,
 .token.keyword,
 .token.class-name {
-	--color: undefined;
+	--color: rgba(25,144,184,0.997);
 }
 
 .token.regex,
@@ -160,7 +160,7 @@ pre[class*="language-"]:after {
 
 .language-css .token.string,
 .style .token.string {
-	--color: undefined;
+	--color: rgba(166,127,89,0.997);
 	background: rgba(255, 255, 255, 0.5);
 }
 
@@ -196,7 +196,7 @@ pre[class*="language-"]:after {
 .token.tab:not(:empty):before,
 .token.cr:before,
 .token.lf:before {
-	--color: undefined;
+	--color: rgba(224,215,209,0.997);
 }
 
 /* Plugin styles: Line Numbers */
